# cockroach

pkg/: BUILD.bazel
pkg/internal/sqlsmith/: relational.go  scalar.go
pkg/roachprod/vm/aws/: embedded.go
pkg/sql/: copy_from.go  crdb_internal.go  create_function.go  create_type.go  distsql_spec_exec_factory.go  opt_exec_factory.go  pg_catalog.go  plan_columns.go  schema_resolver.go  table_function.go  table_function_scan.go  type_change.go
pkg/sql/catalog/: descriptor.go  schema.go
pkg/sql/catalog/colinfo/: col_type_info.go
pkg/sql/catalog/descpb/: structured.proto
pkg/sql/catalog/funcdesc/: func_desc.go  func_desc_test.go
pkg/sql/catalog/schemadesc/: schema_desc.go  synthetic_schema_desc.go
pkg/sql/catalog/schemaexpr/: default_exprs.go
pkg/sql/catalog/typedesc/: hydrate.go  table_implicit_record_type.go  type_desc.go
pkg/sql/importer/: read_import_pgdump.go
pkg/sql/jsonpath/: jsonpath.y
pkg/sql/opt/invertedidx/: json_array.go
pkg/sql/opt/memo/: expr.go  interner.go  logical_props_builder.go  statistics_builder.go  typing.go
pkg/sql/opt/norm/: fold_constants_funcs.go  prune_cols_funcs.go
pkg/sql/parser/: sql.y
pkg/sql/physicalplan/: physical_plan.go
pkg/sql/rowenc/: index_encoding.go
pkg/sql/scanner/: scan.go
pkg/sql/schemachanger/: comparator_generated_test.go
pkg/sql/types/: oid.go  types.go  types.proto
pkg/util/container/orderedmap/: BUILD.bazel  orderedmap.go  orderedmap_test.go
pkg/util/intsets/: fast.go
pkg/util/json/: json.go
pkg/util/jsonpath/: BUILD.bazel  encode.go  exec.go  iterator.go  jsonpath.y  lexer.go  nodes.go  parse.go
(+94 files in other folders)
