load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("//pkg/testutils:buildutil/buildutil.bzl", "disallowed_imports_test")

go_library(
    name = "jsonpath",
    srcs = [
        "encode.go",
        "exec.go",
        "lexer.go",
        "nodes.go",
        "parse.go",
    ],
    importpath = "github.com/cockroachdb/cockroach/pkg/util/jsonpath",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/keysbase",
        "//pkg/sql/inverted",
        "//pkg/sql/pgwire/pgcode",
        "//pkg/sql/pgwire/pgerror",
        "//pkg/util/buildutil",
        "//pkg/util/encoding",
        "//pkg/util/intsets",
        "//pkg/util/json",
        "//pkg/util/metamorphic",
        "//pkg/util/randutil",
        "//pkg/util/syncutil",
        "//pkg/util/unique",
        "@com_github_cockroachdb_apd_v3//:apd",
        "@com_github_cockroachdb_errors//:errors",
    ],
)

disallowed_imports_test(
    "jsonpath",
    ["//pkg/roachpb"],
)
